{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 34,
  "lineage": "600655a8-3cce-3665-8881-dee5eead5f4b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ravi-dev-ec2node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cfa91bdbc3be780c",
            "arn": "arn:aws:ec2:us-west-2:624301448388:instance/i-0968154aacac5ea07",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0968154aacac5ea07",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ravi-dev-ec2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02cae288850a768f3",
            "private_dns": "ip-10-123-1-28.us-west-2.compute.internal",
            "private_ip": "10.123.1.28",
            "public_dns": "ec2-54-187-94-167.us-west-2.compute.amazonaws.com",
            "public_ip": "54.187.94.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07e5fc36e41cca6cf",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0946d6ca953671d5b",
            "tags": {
              "Name": "ravi-dev-ec2node"
            },
            "tags_all": {
              "Name": "ravi-dev-ec2node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004a95f32a7fedbf3"
            ]
          },
          "dependencies": [
            "aws_key_pair.ravi-dev-ec2-key",
            "aws_security_group.ravi-dev-sg",
            "aws_subnet.ravi-dev-public-subnet",
            "aws_vpc.ravi-dev-vpc",
            "data.aws_ami.server-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ravi-dev-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:624301448388:internet-gateway/igw-0f422e4809d950441",
            "id": "igw-0f422e4809d950441",
            "owner_id": "624301448388",
            "tags": {
              "Name": "ravi-dev-igw"
            },
            "tags_all": {
              "Name": "ravi-dev-igw"
            },
            "vpc_id": "vpc-0e8b2cfb18e957452"
          },
          "dependencies": [
            "aws_vpc.ravi-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f422e4809d950441",
            "id": "r-rtb-06a7d49d13b85c20b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06a7d49d13b85c20b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ravi-dev-igw",
            "aws_route_table.ravi-dev-rt",
            "aws_vpc.ravi-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ravi-dev-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:624301448388:route-table/rtb-06a7d49d13b85c20b",
            "id": "rtb-06a7d49d13b85c20b",
            "owner_id": "624301448388",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f422e4809d950441",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ravi-dev-public-rt"
            },
            "tags_all": {
              "Name": "ravi-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8b2cfb18e957452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ravi-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ravi-dev-rt-association-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0def7d69e8307d8fd",
            "route_table_id": "rtb-06a7d49d13b85c20b",
            "subnet_id": "subnet-0946d6ca953671d5b"
          },
          "dependencies": [
            "aws_route_table.ravi-dev-rt",
            "aws_subnet.ravi-dev-public-subnet",
            "aws_vpc.ravi-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ravi-dev-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:624301448388:security-group/sg-004a95f32a7fedbf3",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004a95f32a7fedbf3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connect from my PC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ravi-dev-sg",
            "name_prefix": "",
            "owner_id": "624301448388",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8b2cfb18e957452"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ravi-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ravi-dev-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:624301448388:subnet/subnet-0946d6ca953671d5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0946d6ca953671d5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "624301448388",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ravi-public-subnet"
            },
            "tags_all": {
              "Name": "ravi-public-subnet"
            },
            "vpc_id": "vpc-0e8b2cfb18e957452"
          },
          "dependencies": [
            "aws_vpc.ravi-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ravi-dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:624301448388:vpc/vpc-0e8b2cfb18e957452",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-01e178552c3a2ad5f",
            "default_route_table_id": "rtb-05dd05b1f3d968f6b",
            "default_security_group_id": "sg-09bbcb192615ce461",
            "dhcp_options_id": "dopt-0c4a6b3a556a2d69b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e8b2cfb18e957452",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05dd05b1f3d968f6b",
            "owner_id": "624301448388",
            "tags": {
              "Name": "ravi-vpc"
            },
            "tags_all": {
              "Name": "ravi-vpc"
            }
          }
        }
      ]
    }
  ]
}